final fix
# Conflicts:
#	src/main/java/com/example/dsavisualizer/controller/modules/Graphcontroller.java
#	src/main/java/com/example/dsavisualizer/controller/modules/QueueController.java
#	src/main/java/com/example/dsavisualizer/controller/modules/RecursionController.java
#	src/main/java/com/example/dsavisualizer/view/Home.fxml
#	src/main/resources/view/module.fxml
#	src/main/resources/view/modules/bst.fxml
#	src/main/resources/view/modules/graph.fxml
#	src/main/resources/view/modules/recursion.fxml